# modernop

./: README.md
bbound/: CMakeLists.txt
bbound/src/: bbound.cpp
branchbound/: CMakeLists.txt
branchbound/src/: branchbound.cpp
locsearch/: CMakeLists.txt
locsearch/src/: locsearch.cpp
maxclique/: CMakeLists.txt
maxclique/src/: maxclique.cpp
vertexcolor/: CMakeLists.txt  results.txt
vertexcolor/src/: vertexcolor.cpp
